        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=49700
        XSLTProcessor.importNode is only tested with document nodes, and hits an assertion

        Test: fast/xsl/import-non-document-node.xhtml

        * css/CSSStyleSheet.cpp:
        (WebCore::isAcceptableCSSStyleSheetParent):
        (WebCore::CSSStyleSheet::CSSStyleSheet):
        * css/StyleSheet.cpp:
        (WebCore::StyleSheet::StyleSheet):
        Moved the assertion - hopefully, it's valid for CSS stylesheets.



Canonical link: https://commits.webkit.org/62763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72301 268f45cc-cd09-0410-ab3c-d52691b4dbfc